--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "echarts": "^5.4.3",
     "vue": "^2.6.14"
